2012-12-04  David S. Miller  <davem@abraco.davemloft.net>

	* sysdeps/generic/memcopy.h: Add multiple inclusion protection.

2012-12-04  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/ieee754/ldbl-opt/Makefile [$(subdir) = math]
	(CFLAGS-nldbl-acos.c): New variable.
	[$(subdir) = math] (CFLAGS-nldbl-acosh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-asin.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-asinh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-atan.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-atan2.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-atanh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cabs.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cacos.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cacosh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-carg.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-casin.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-casinh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-catan.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-catanh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cbrt.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-ccos.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-ccosh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-ceil.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cexp.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cimag.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-clog.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-clog10.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-conj.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-copysign.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cos.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cosh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cpow.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-cproj.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-creal.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-csin.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-csinh.c): Likewise.
	[$(subdir) = math] (CFLAGS-nldbl-csqrt.c): Likewise.